gccida/g2/eliminate_phi
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_phi/src/ssa.c:1888:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( __int64)insn_after_basic_block_note[2]; 
               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_phi/src/ssa.c:1913:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v10 = ( __int64)nonnote_insn[2]; 
                ^~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_phi/src/ssa.c:2090:22: error: use of undeclared identifier 'machine_mode'
v62 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)v61 + 2)); 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/eliminate_phi/src/obj/ssa.o] Error 1
